# MyClip

./: pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: DropZone.tsx  EmptyState.tsx  IngestPanel.tsx  SceneCard.tsx  SceneGrid.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/hooks/: useApi.ts
src/myclip/: __init__.py  api.py  cli.py  config.py  database.py  embeddings.py  export.py  frames.py  ingest.py  objects.py  scene_detect.py  search.py  subtitles.py
tests/: test_database.py  test_embeddings.py  test_export.py  test_frames.py  test_ingest.py  test_integration.py  test_objects.py  test_scene_detect.py  test_search.py  test_subtitles.py
tests/fixtures/: sample.srt
