[project]
name = "myclip"
version = "0.1.0"
description = "Scene-based video clipper for TV shows"
requires-python = ">=3.11"
dependencies = [
    "scenedetect[opencv]",
    "open_clip_torch",
    "ultralytics",
    "faiss-cpu",
    "pysrt",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
myclip = "myclip.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myclip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
